--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <body>
-            Hello, world! Hello, again! Hello a third time!
-        </body>
+        <title>
+            My Web-page
+        </title>
     </head>
+
+    <body>
+        Hello, world! Hello, again! Hello a third time!
+    </body>
 </html>
